@@ -89,6 +89,12 @@ wait_until_done ()
     return 0
 }
 
+export HBASE_HEAPSIZE=4096
+export HBASE_OPTS="$HBASE_OPTS -XX:+UseConcMarkSweepGC"
+export HBASE_OPTS="$HBASE_OPTS -verbose:gc -XX:+PrintGCDetails -XX:+PrintGCDateStamps $HBASE_GC_OPTS"
+export HBASE_USE_GC_LOGFILE=true
+export HBASE_MANAGES_ZK=true
+
 # get log directory
 if [ "$HBASE_LOG_DIR" = "" ]; then
   export HBASE_LOG_DIR="$HBASE_HOME/logs"
